[package]
name = "rust-pdf-skia"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
raw-window-handle = "0.5"
skia-safe = { version = "0.75", features = ["vulkan"] }
ash = "0.37"
ash-window = "0.12"
pdfium-render = "0.8"
image = { version = "0.25", default-features = false, features = ["ico"] }